--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -1086,10 +1086,11 @@ input, select, textarea {margin :0;}
             medical form
 ====================================== */
 
-.form-bg {    background: url("../img/table-img.jpg") no-repeat;
+.form-bg {    background: url("../img/DeliveryManKitoApp.jpg") no-repeat;
     background-attachment: inherit;
     background-size: cover;
     background-position: top center;
+    position: relative;
 }
 .form-title h2 {font-size: 48px;
     color: #ffffff;
@@ -3177,4 +3178,12 @@ Go Top CSS
     .pb-60 {
         padding-bottom: 0 !important;
     }
+}
+
+
+/*Diego*/
+.Filter{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
